--- a/src/components/Grid/components/ItemVariant1/styles.css
+++ b/src/components/Grid/components/ItemVariant1/styles.css
@@ -2,7 +2,8 @@
   
   .item-image {
     width: 100%;
-    margin-bottom: 8px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
   }
   
   .item-title {
